@@ -6,5 +6,8 @@
 == Foolproof
 * Should not be possible delete the "ID" field from grids/forms
 
+== Optimizations
+* Check persistent_config-related queries (aren't they too many?)
+
 == One day
 * Replace xcheckbox with checkbox in FormPanel
